# ServicePilot

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
docs/: memory-analysis.md
docs/releases/: README.md  v1.0.10.md  v1.0.11.md  v1.0.12.md  v1.0.13.md  v1.0.14.md  v1.0.15.md  v1.0.8.md  v1.0.9.md
scripts/: generate-updater-manifest.mjs  release-notes.mjs  release-update.mjs  release.mjs  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  commands.rs  common.rs  frontend_support.rs  groups.rs  idea_support.rs  lib.rs  log_parsing.rs  logs.rs  main.rs  models.rs  runtime.rs  runtime_support.rs  service_detection.rs  services.rs  settings.rs  store.rs  tests.rs
src/renderer/: App.test.tsx  App.tsx  app-utils.test.ts  app-utils.ts  globals.d.ts  main.tsx  styles.css  tauri-bridge.test.ts  tauri-bridge.ts  test-setup.ts
src/renderer/assets/icons/tech/: README.md
src/renderer/features/groups/: group-forms.ts
src/renderer/features/logs/: log-utils.test.tsx  log-utils.tsx
src/renderer/features/services/: service-forms.test.ts  service-forms.ts
src/renderer/features/settings/: settings-forms.ts
src/shared/: models.ts
