[package]
name = "service-pilot"
version = "0.1.0"
description = "Desktop manager for local Spring Boot and Vue development services."
authors = ["OpenAI"]
edition = "2021"

[package.metadata]

[lib]
name = "service_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
